--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,13 @@
-li{
-    list-style-type: none;
+body {
+  background-color: #fec7d7;
+}
+li {
+  list-style-type: none;
+}
+h1 {
+  font-family: "Proza Libre";
+}
+p {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
