--- a/styles/index.css
+++ b/styles/index.css
@@ -4,10 +4,22 @@ body {
 li {
   list-style-type: none;
 }
+.nav {
+  display: block;
+  padding: 12px;
+  text-decoration: none;
+  width: 200px;
+  font-family: "Proza Libre";
+}
 h1 {
   font-family: "Proza Libre";
 }
 p {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: #0e172c;
+}
+footer {
+  background-color: #d9d4e7;
+}
+header {
+  background-color: #d9d4e7;
 }
