--- a/styles/index.css
+++ b/styles/index.css
@@ -84,6 +84,8 @@
 }
 body {
   font-family: "Proza Libre";
+  margin-left: 0;
+  margin-right: 0;
 }
 h1 {
   text-align: center;
@@ -105,7 +107,7 @@ p {
   background-color: #a786df;
   width: 100%;
 }
-#color{
- color:#0e172c;
- font-size: 21px;
+#color {
+  color: #0e172c;
+  font-size: 21px;
 }
